# sparrow

./: CMakeLists.txt  README.md  a.out  cmake.sh  test.c
cli/: cli.c  cli.h
compiler/: compile_head.h  compiler.c  compiler.h
include/: common.h  core.h  unicodeUtf8.c  unicodeUtf8.h  utils.c  utils.h
object/: class.c  class.h  header_obj.c  header_obj.h  meta_obj.c  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_range.c  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h
parser/: parser.c  parser.h  token.list
vm/: core.c  core.h  core.script.inc  opcode.inc  vm.c  vm.h
